fix: Remove spacing for task list items Closes #2954

--- a/source/common/modules/markdown-editor/editor.less
+++ b/source/common/modules/markdown-editor/editor.less
@@ -105,6 +105,7 @@
   input[type="checkbox"] {
     transform: scale(1.2);
     margin: 0.2em;
+    min-width: auto; // Reset the min-width property that applies to other checkboxes
     vertical-align: middle;
   }
 
